inshare-easy file tranfer

--- a/public/index.html
+++ b/public/index.html
@@ -62,12 +62,12 @@
                     <form id="emailForm" autocomplete="off">
                         <div class="filed">
                             <label for="fromEmail">Your email : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                            <input type="email" autocomplete="email" required autocomplete="off" name="from-email" id="fromEmail">
+                            <input type="email"  required autocomplete="off" name="from-email" id="fromEmail">
                         </div>
 
                         <div class="filed">
                             <label for="toEmail">Receiver's email : &nbsp;&nbsp;&nbsp;&nbsp;</label>
-                            <input type="email" required autocomplete="receiver" autocomplete="off" name="to-email" id="toEmail">
+                            <input type="email" required autocomplete="off" name="to-email" id="toEmail">
                         </div>
                         <div class="send-btn-container">
                          <center> <button class='btns' disabled type="submit">Uploading</button></center>  
