--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,10 @@
                     <div class="status">Uploading...</div>
                     <div class="percent-container">
                         <span class="percentage" id="progressPercent">0</span>%
+                        <div class="progress-bar"><br/></div>
                     </div>
-                    <div class="progress-bar"></div>
-                    
+                    <div ></div>
+
                 </div>
                 
 
