--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <img src="./images/logo.png" alt="Inshare logo" class="logo">
     <div class="body">
-        <img class='images' src="./images/undraw-upload.svg" draggable="false" alt="background">
+        <img class='images' src="./images/undraw-upload.svg" draggable="false" alt="background"><br/><br/><br/>
         <section class="upload-container">
             <form action="" autocomplete="off">
                 <div class="drop-zone">
