inshare-easy file tranfer

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
 <body>
     <div class="toast">Sample message</div>
 
-    <img src="./images/logo.png" alt="Inshare logo" class="logo">
+   <a href='index.html'> <img src="./images/logo.png" alt="Inshare logo" class="logo"></a>
     <div class="body">
-        <img class='images' src="./images/undraw-upload.svg" draggable="false" alt="background"><br/><br/><br/>
+        <img class='images' src="./images/undraw-upload.svg" draggable="false" alt="background"><br/>
         <section class="upload-container">
             <form action="" autocomplete="off">
                 <div class="drop-zone">
